--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "husky": {
     "hooks": {
       "pre-commit": "NODE_ENV=production lint-staged",
-      "pre-push": "npm test",
-      "...": "..."
+      "pre-push": "npm run test"
     }
   },
   "lint-staged": {
