--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "husky": {
     "hooks": {
       "pre-commit": "NODE_ENV=production lint-staged",
-      "pre-push": "npm run test"
+      "pre-push": "npm test --watchAll=false"
     }
   },
   "lint-staged": {
