--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "husky": {
     "hooks": {
       "pre-commit": "NODE_ENV=production lint-staged",
-      "pre-push": "npm test --watchAll=false"
+      "pre-push": "npm test"
     }
   },
   "lint-staged": {
@@ -26,7 +26,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --watchAll=false",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
