--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "lint-staged": {
     "*.{js,jsx}": [
       "pretty-quick --staged",
-      "eslint src/ --fix",
-      "git add"
+      "eslint src/ "
     ]
   },
   "dependencies": {
