--- a/amplify.yml
+++ b/amplify.yml
@@ -3,7 +3,7 @@ frontend:
   phases:
     # IMPORTANT - Please verify your build commands
     build:
-      commands: ['npm build']
+      commands: ['npm run build']
   artifacts:
     baseDirectory: build
     files:
